<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#443b"
    tools:context="com.example.mohamed.calculatrice.MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="337dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:background="#fff"
        android:inputType="textPersonName"
        android:hint="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcule"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/un"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/deux"
        android:layout_width="wrap_content"
        android:onClick="calcule"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/deux"
        app:layout_constraintEnd_toStartOf="@+id/trois"
        app:layout_constraintStart_toEndOf="@+id/un"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/trois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/trois"
        android:onClick="calcule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deux"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/quatre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:onClick="calcule"
        android:layout_marginTop="10dp"
        android:text="@string/quatre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/un" />

    <Button
        android:id="@+id/cinq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:onClick="calcule"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/cinq"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/quatre"
        app:layout_constraintTop_toBottomOf="@+id/deux" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcule"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cinq"
        app:layout_constraintTop_toBottomOf="@+id/trois" />

    <Button
        android:id="@+id/sept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcule"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/sept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quatre" />

    <Button
        android:id="@+id/huit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/huit"
        app:layout_constraintEnd_toStartOf="@+id/neuf"
        app:layout_constraintStart_toEndOf="@+id/sept"
        app:layout_constraintTop_toBottomOf="@+id/cinq" />

    <Button
        android:id="@+id/neuf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/neuf"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="calcule"
        app:layout_constraintStart_toEndOf="@+id/huit"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sept" />

    <Button
        android:id="@+id/egale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule1"
        android:text="@string/egal"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/prod" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/neuf" />

    <Button
        android:id="@+id/moins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/moins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/prod"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintStart_toEndOf="@+id/moins"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:onClick="calcule"
        android:layout_marginTop="10dp"
        android:text="@string/virgule"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/huit" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:onClick="calcule"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcule"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/ouss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moins" />
</android.support.constraint.ConstraintLayout>
